--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,7 +18,7 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click="narrowCtrl.matchFood()">Narrow It Down For Me!</button>
     </div>
-       <found-items items="narrowCtrl.matches" title="title" on-remove="narrowCtrl.removeItem(index)" ></found-items>
+       <found-items items="narrowCtrl.foundItems" on-remove="narrowCtrl.removeItem(index)" ></found-items>
   </div>
 
 </body>
